[gd_scene load_steps=7 format=3 uid="uid://k674negy5b3w"]

[ext_resource type="Texture2D" uid="uid://c6u33tyiqc8se" path="res://Assets/GameAssets/Candy.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Candy.gd" id="2"]
[ext_resource type="FontFile" uid="uid://bxec0h0bmbcnd" path="res://Fonts/Blissful Thinking.otf" id="3"]

[sub_resource type="ShaderMaterial" id="3"]

[sub_resource type="CircleShape2D" id="1"]
radius = 23.0217

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/64/0 = Vector2(0, 0)
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0
cache/0/64/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/64/0/kerning_overrides/64/0 = Vector2(0, 0)

[node name="Candy" type="Area2D"]
position = Vector2(0, 0.705905)
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("3")
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("1")

[node name="Particle" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -17.0
offset_right = 20.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(1, 0.509804, 0.027451, 1)
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 64
text = "+1"

[connection signal="body_entered" from="." to="." method="_on_Candy_body_entered"]
[connection signal="collected" from="." to="." method="_on_Candy_collected"]
